--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>I am static website</title>
   </head>
   <body>
-    <h1>I am static website from Main Branch</h1>
-    <h4>2nd Version</h4>
+    <h1>I am static website from Main Branch please learn</h1>
+    <h4>using branch variables</h4>
   </body>
 </html>
