--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>I am static website from Main Branch please learn  </h1>
-    <h4>using branch variables deployed</h4>
+    <h4>I AM AT GUNA BRNACH</h4>
   </body>
 </html>
